src/test/deca/syntax/invalid/created/bloc_alone/class_alone.deca
// Description:
//      Bloc class sans identifier
// Resultats:
//      Error synthaxe Ligne 6 : missing IDENT at '{'

class {}